Add some ansible

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,7 @@ inventory 		= hosts
 remote_tmp		= /tmp
 forks			= 50
 nocols			= 1
+nocolor			= True
 remote_user		= root
 vault_password_file	= ~/.of2019-vault-pass
 roles_path		= playbooks/roles
@@ -10,4 +11,4 @@ host_key_checking	= False
 
 [ssh_connection]
 pipelining		= True
-ssh_args		= -C -o ControlMaster=auto -o ControlPersist=600s -o PasswordAuthentication=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+ssh_args		= -C -o ControlMaster=auto -o ControlPersist=600s -o PasswordAuthentication=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ControlPath=/tmp/ansible-ssh-%h-%p-%r
