fix voc descriptions

--- a/switch-configs/vocsw-B.cfg
+++ b/switch-configs/vocsw-B.cfg
@@ -74,14 +74,14 @@ snmp-server traps vlan delete
 #
 interface gigabitEthernet 1/0/1
   switchport access vlan 25
-  description "phone"
+  description "voc-B/phone"
   spanning-tree
   spanning-tree common-config portfast enable
 
 #
 interface gigabitEthernet 1/0/2
   switchport access vlan 23
-  description "streamer"
+  description "voc-B/streamer"
   spanning-tree
   spanning-tree common-config portfast enable
 
@@ -90,41 +90,41 @@ interface gigabitEthernet 1/0/3
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "videoswitcher"
+  description "voc-B/videoswitcher"
 
 #
 interface gigabitEthernet 1/0/4
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "scaler"
+  description "voc-B/scaler"
 
 #
 interface gigabitEthernet 1/0/5
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "control/1"
+  description "voc-B/control-1"
 
 #
 interface gigabitEthernet 1/0/6
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "control/2"
+  description "voc-B/control-2"
 
 #
 interface gigabitEthernet 1/0/7
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "control/3"
+  description "voc-B/control-3"
 
 #
 interface gigabitEthernet 1/0/8
   switchport mode trunk
   switchport trunk allowed vlan 20,23,25
-  description "uplink/trunk"
+  description "voc-B/uplink"
   spanning-tree
   spanning-tree common-config portfast enable
 
