--- a/switch-configs/vocsw-C.cfg
+++ b/switch-configs/vocsw-C.cfg
@@ -74,7 +74,7 @@ snmp-server traps vlan delete
 #
 interface gigabitEthernet 1/0/1
   switchport access vlan 25
-  description "phone"
+  description "voc-C/phone"
   spanning-tree
   spanning-tree common-config portfast enable
 
@@ -104,27 +104,27 @@ interface gigabitEthernet 1/0/5
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "control/1"
+  description "voc-C/control-1"
 
 #
 interface gigabitEthernet 1/0/6
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "control/2"
+  description "voc-C/control-2"
 
 #
 interface gigabitEthernet 1/0/7
   switchport access vlan 23
   spanning-tree
   spanning-tree common-config portfast enable
-  description "control/3"
+  description "voc-C/control-3"
 
 #
 interface gigabitEthernet 1/0/8
   switchport mode trunk
   switchport trunk allowed vlan 20,23,25
-  description "uplink/trunk"
+  description "voc-C/uplink"
   spanning-tree
   spanning-tree common-config portfast enable
 
