--- a/switch-configs/vocsw-D.cfg
+++ b/switch-configs/vocsw-D.cfg
@@ -124,7 +124,7 @@ interface gigabitEthernet 1/0/7
 interface gigabitEthernet 1/0/8
   switchport mode trunk
   switchport trunk allowed vlan 20,23,25
-  description "uplink/trunk"
+  description "voc-D/uplink"
   spanning-tree
   spanning-tree common-config portfast enable
 
