--- a/switch-configs/f0sw.cfg
+++ b/switch-configs/f0sw.cfg
@@ -1,13 +1,3 @@
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-!
-!    F0SW for OpenFest 2019
-!
-!    HW: WS-C3750G-24TS
-!    SW: c3750-ipservicesk9-mz.122-55.SE6.bin
-!
-! 2018.07.29 - initial
-!
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !
 version 12.2
 no service pad
@@ -20,15 +10,14 @@ hostname f0sw
 boot-start-marker
 boot-end-marker
 !
-enable password @EN_PW@
+enable password @_PW_@
 !
 !
 !
 no aaa new-model
-switch 2 provision ws-c3750g-24ts
-system mtu routing 1546
+system mtu routing 1500
 vtp mode transparent
-ip name-server 10.20.0.1
+!
 !
 !
 !
@@ -40,10 +29,11 @@ ip name-server 10.20.0.1
 spanning-tree mode mst
 spanning-tree extend system-id
 !
-vlan internal allocation policy ascending
+spanning-tree mst configuration
+ name openfest
 !
-vlan 10
- name external
+!
+vlan internal allocation policy ascending
 !
 vlan 20
  name of-mgmt
@@ -69,48 +59,236 @@ vlan 26
 !
 !
 !
-interface GigabitEthernet2/0/1
+interface GigabitEthernet0/1
  description nocsw
  switchport trunk encapsulation dot1q
  switchport trunk allowed vlan 20-26
  switchport mode trunk
- no cdp enable
- spanning-tree bpdufilter enable
- spanning-tree bpduguard enable
+ spanning-tree portfast trunk
 !
-interface GigabitEthernet2/0/2
- shutdown
-!
-interface GigabitEthernet2/0/3
+interface GigabitEthernet0/2
  description ap-ws-ws1
  switchport trunk encapsulation dot1q
  switchport trunk allowed vlan 20,22
  switchport mode trunk
- no cdp enable
  spanning-tree portfast trunk
 !
-interface GigabitEthernet2/0/4
+interface GigabitEthernet0/3
  description ap-ws-ws2
  switchport trunk encapsulation dot1q
  switchport trunk allowed vlan 20,22
  switchport mode trunk
- no cdp enable
  spanning-tree portfast trunk
 !
-interface range GigabitEthernet2/0/5-23
+interface GigabitEthernet0/4
  shutdown
+ spanning-tree portfast trunk
 !
-interface GigabitEthernet2/0/24
+interface GigabitEthernet0/5
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/6
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/7
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/8
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/9
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/10
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/11
+ description wired-user
+ switchport access vlan 21
+ switchport mode access
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/12
+ description wired-user
+ switchport access vlan 21
+ switchport mode access
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/13
+ description wired-user
+ switchport access vlan 21
+ switchport mode access
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/14
+ description wired-user
+ switchport access vlan 21
+ switchport mode access
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/15
+ description wired-user
+ switchport access vlan 21
+ switchport mode access
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/16
+ description wired-user
+ switchport access vlan 21
+ switchport mode access
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/17
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/18
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/19
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/20
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/21
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/22
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/23
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/24
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/25
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/26
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/27
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/28
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/29
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/30
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/31
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/32
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/33
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/34
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/35
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/36
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/37
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/38
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/39
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/40
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/41
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/42
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/43
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/44
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/45
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/46
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/47
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/48
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/49
  description uplink
  switchport trunk encapsulation dot1q
- switchport trunk allowed vlan 20-26
  switchport mode trunk
- no cdp enable
- spanning-tree bpdufilter enable
- spanning-tree bpduguard enable
+ spanning-tree portfast trunk
 !
-interface range GigabitEthernet2/0/25-28
+interface GigabitEthernet0/50
  shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/51
+ shutdown
+ spanning-tree portfast trunk
+!
+interface GigabitEthernet0/52
+ shutdown
+ spanning-tree portfast trunk
 !
 interface Vlan1
  no ip address
@@ -126,12 +304,11 @@ no ip http secure-server
 !
 !
 !
-snmp-server community @SNMP_PW@ RO
+snmp-server community @_PW_@ RO
 snmp-server trap-source Vlan20
 snmp-server enable traps snmp authentication linkdown linkup coldstart warmstart
 snmp-server enable traps transceiver all
 snmp-server enable traps tty
-snmp-server enable traps fru-ctrl
 snmp-server enable traps entity
 snmp-server enable traps cpu threshold
 snmp-server enable traps vtp
@@ -141,7 +318,6 @@ snmp-server enable traps flash insertion removal
 snmp-server enable traps port-security
 snmp-server enable traps auth-framework sec-violation
 snmp-server enable traps envmon fan shutdown supply temperature status
-snmp-server enable traps license
 snmp-server enable traps config-copy
 snmp-server enable traps config
 snmp-server enable traps config-ctid
@@ -159,17 +335,16 @@ snmp-server enable traps rtr
 snmp-server enable traps mac-notification change move threshold
 snmp-server enable traps vlan-membership
 snmp-server enable traps errdisable
-snmp-server host 10.20.0.1 version 2c @SNMP_PW@
+snmp-server host 10.20.0.1 version 2c @_PW_@ 
 !
 !
 line con 0
 line vty 0 4
- password @PW@
+ password @_PW_@
  login
 line vty 5 15
- password @PW@
+ password @_PW_@
  login
 !
-ntp clock-period 36026772
 ntp server 10.20.0.1
 end
