--- a/communication/slack-irc-sync/config.toml
+++ b/communication/slack-irc-sync/config.toml
@@ -62,6 +62,14 @@
 		channel="noc"
 
 [[gateway]]
+	name="api-si-noc"
+	enable=true
+
+	[[gateway.in]]
+		account="api.local"
+		channel="api"
+
+[[gateway]]
 	name="si-of-video"
 	enable=true
 
@@ -72,6 +80,10 @@
 	[[gateway.inout]]
 		account="slack.openfest"
 		channel="video"
+	[[gateway.out]]
+		account="slack.openfest"
+		channel="noc"
+
 
 [[gateway]]
 	name="api-fan"
