Well output the messages please

--- a/communication/slack-irc-sync/config.toml
+++ b/communication/slack-irc-sync/config.toml
@@ -68,6 +68,9 @@
 	[[gateway.in]]
 		account="api.local"
 		channel="api"
+	[[gateway.out]]
+		account="slack.openfest"
+		channel="noc"
 
 [[gateway]]
 	name="si-of-video"
